--- a/color-marquee.html
+++ b/color-marquee.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="google" content="notranslate" />
-  <title></title>
+  <title>$$$</title>
 
     <style>
       .marquee {
@@ -228,10 +228,11 @@
     () => 0,
     () => 0,
     () => 0,
-    () => 0,
-    () => 180,
+    () => rnd(20),
     () => rnd(20),
     () => rnd(20, 180),
+    () => rnd(20, 180),
+    () => 180,
   ])
 
   const freeFloating = ![0, 180].includes(lineRotation())
