--- a/color-marquee.html
+++ b/color-marquee.html
@@ -4,6 +4,34 @@
   <meta charset="utf-8">
   <meta name="google" content="notranslate" />
   <title>$$$</title>
+    <script>
+      function genTokenData(projectNum) {
+
+        const tokenId = String(projectNum * 1000000 + Math.floor(Math.random() * 1000))
+        let hash = '0x'
+        if (window.location.search.includes('?hash=')) {
+          hash = window.location.search.slice(6)
+        } else {
+          for (let i = 0; i < 64; i++) {
+            hash += Math.floor(Math.random() * 16).toString(16)
+          }
+          window.location.hash = '#' + hash
+
+          const last10hashes = JSON.parse(localStorage.getItem('last10Hashes')) || []
+          last10hashes.unshift(hash)
+
+          localStorage.setItem('last10Hashes', JSON.stringify(last10hashes.slice(0, 10)))
+        }
+        return {
+          hash,
+          // hash: '0xfeff8806ffe0ff004900b6104392c062d40f238839029c82ed000ffff3cb2003',
+          tokenId
+        }
+      }
+
+      const tokenData = genTokenData(999)
+      console.log(tokenData.hash)
+    </script>
 
     <style>
       .marquee {
@@ -160,7 +188,7 @@
     .layout {
       height: 100${vh};
       width: 100${vw};
-
+      overflow: hidden;
       display: grid;
       grid-template-rows: repeat(${rows}, 1fr);
       grid-template-columns: repeat(${cols}, 1fr);
@@ -218,7 +246,7 @@
   ])
 
   document.body.style.background = sample([
-    `hsl(${Math.random() * 360}deg, 100%, 50%)`,
+    `hsl(${rnd(360)}deg, 100%, 50%)`,
     `#fff`,
     `#000`,
   ])
@@ -269,6 +297,8 @@
   const showBorder = prb(0.1)
   const rotateColor = prb(0.05)
 
+  const deepShadows = prb(0.1)
+
   const sat = 100
 
 
@@ -291,7 +321,7 @@
       const shadowColor = `hsl(${shadowH}deg, ${sat}%, 20%)`
       const shadow2Color = `hsl(${shadow2H}deg, ${sat}%, 50%)`
       const height = `calc(${100*rSpan}${vh}/${rows})`
-      const shadowHeight = `calc(1${vh}/${rows})`
+      const shadowHeight = deepShadows ? `0.1em` : `calc(1${vh}/${rows})`
       const negShadowHeight = `calc(-3${vh}/${rows})`
 
 
