fix broken ones

--- a/stop.html
+++ b/stop.html
@@ -26,6 +26,6 @@
 </head>
 <body>
   <h1>Stop!</h1>
-  <h2>Unless you understand <em><strong>exactly</strong></em> what you are doing, </h2>
+  <h2>Unless you understand <em><strong>exactly</strong></em> what you are doing</h2>
 </body>
 </html>
