--- a/fud.html
+++ b/fud.html
@@ -3,7 +3,34 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+    <script>
+      function genTokenData(projectNum) {
 
+        const tokenId = String(projectNum * 1000000 + Math.floor(Math.random() * 1000))
+        let hash = '0x'
+        if (window.location.search.includes('?hash=')) {
+          hash = window.location.search.slice(6)
+        } else {
+          for (let i = 0; i < 64; i++) {
+            hash += Math.floor(Math.random() * 16).toString(16)
+          }
+          window.location.hash = '#' + hash
+
+          const last10hashes = JSON.parse(localStorage.getItem('last10Hashes')) || []
+          last10hashes.unshift(hash)
+
+          localStorage.setItem('last10Hashes', JSON.stringify(last10hashes.slice(0, 10)))
+        }
+        return {
+          hash,
+          // hash: '0xfeff8806ffe0ff004900b6104392c062d40f238839029c82ed000ffff3cb2003',
+          tokenId
+        }
+      }
+
+      const tokenData = genTokenData(999)
+      console.log(tokenData.hash)
+    </script>
     <style>
       .marquee {
         overflow: hidden;
@@ -115,7 +142,7 @@
     const duration = (5 + Math.random()) * text.length / 11
     return marquee(`<h2>${text}</h2>`, {
       direction: posOrNeg(),
-      delay: rnd(-1000, 0),
+      delay: rnd2(-1000, 0),
       duration
     })
   }
@@ -135,8 +162,8 @@
   //     //   `<h2 style="padding-right: 2em">${txt}</h2>`, {
   //     //     style: `grid-column: span ${cSpan}; border: 2px solid;`,
   //     //     direction: posOrNeg(),
-  //     //     delay: rnd(-1000, 0),
-  //     //     duration: rnd(0.01, 2) * 5
+  //     //     delay: rnd2(-1000, 0),
+  //     //     duration: rnd2(0.01, 2) * 5
   //     //   })
   //     // )
 
