--- a/color-marquee.html
+++ b/color-marquee.html
@@ -294,7 +294,7 @@ Things are moving fast, and if you want to make the most of this opportunity you
     [word(`Do you CRAVE YIELD?!`, 3)],
     [word(`FEAR UNCERTAINTY DOUBT`, 3)],
     [word(`YOU WON'T BELIEVE THIS!`, 3)],
-    // [word(`OPPORTUNITY OF A LIFETIME`, 3.5)],
+    [word(`OPPORTUNITY OF A LIFETIME`, 3.5)],
     [word(`MAKE GENERATIONAL WEALTH NOW`, 4)],
     [word(`ACT NOW (Before It's Too Late)`, 4.5)],
     [word(`Stop THROWING YOUR MONEY AWAY!`, 4.5)],
