add marquee timer

--- a/color-marquee.html
+++ b/color-marquee.html
@@ -258,6 +258,7 @@ Things are moving fast, and if you want to make the most of this opportunity you
     [word(`LUCKY`)],
     [word(`SEXY`), word(`XXX`)],
     [word(`FREE`)],
+    [word(`FOMO`)],
     [word(`BUY NOW`)],
     [word(`AMAZING!`)],
     [word(`CRYPTO`)],
@@ -288,6 +289,7 @@ Things are moving fast, and if you want to make the most of this opportunity you
     [word(`THROBBING GAINS`, 2)],
     [word(`THIS WON'T LAST`, 2)],
     [word(`CONGRATULATIONS`, 2)],
+    [word(`FEAR OF MISSING OUT`, 3)],
     [word(`DEAL OF THE CENTURY`, 3)],
     [word(`NEVER LOOKED SO GOOD`, 3)],
     [word(`TOO GOOD TO BE TRUE!`, 3)],
@@ -584,6 +586,7 @@ times(parseInt(Math.random() * 100), () => rnd())
 
 
 
+  setTimeout(() => location.reload(), 60000)
 
 
 </script>
