--- a/color-marquee.html
+++ b/color-marquee.html
@@ -1,6 +1,15 @@
 <!--
 Things are moving fast, and if you want to make the most of this opportunity you need to pounce on it. Don't wait. Act Now. These deals won't last.
 
+
+
+
+
+👈👉
+irregular grids
+text animating getting bigger/smaller
+
+
  -->
 
 <!DOCTYPE html>
@@ -289,6 +298,7 @@ Things are moving fast, and if you want to make the most of this opportunity you
     [word(`THROBBING GAINS`, 2)],
     [word(`THIS WON'T LAST`, 2)],
     [word(`CONGRATULATIONS`, 2)],
+    [word(`TOO GOOD TO BE TRUE`, 3)],
     [word(`FEAR OF MISSING OUT`, 3)],
     [word(`DEAL OF THE CENTURY`, 3)],
     [word(`NEVER LOOKED SO GOOD`, 3)],
@@ -298,6 +308,7 @@ Things are moving fast, and if you want to make the most of this opportunity you
     [word(`YOU WON'T BELIEVE THIS!`, 3)],
     [word(`OPPORTUNITY OF A LIFETIME`, 3.5)],
     [word(`MAKE GENERATIONAL WEALTH NOW`, 4)],
+    [word(`I COULDN'T BELIEVE IT EITHER!`, 4)],
     [word(`ACT NOW (Before It's Too Late)`, 4.5)],
     [word(`Stop THROWING YOUR MONEY AWAY!`, 4.5)],
     [word(`YOU CAN'T AFFORD TO PASS THIS UP`, 4.5)],
