--- a/death.html
+++ b/death.html
@@ -55,6 +55,23 @@
     h2:last-child {
       margin-bottom: 1em;
     }
+
+
+    @media (min-aspect-ratio: 2/1) {
+      .deathBox {
+        width: 150vh;
+      }
+      .layout {
+        padding: 4vh;
+      }
+      h1 {
+        font-size: 12vh;
+      }
+
+      h2 {
+        font-size: 6vh;
+      }
+    }
   </style>
 </head>
 <body>
