--- a/disclaimer.html
+++ b/disclaimer.html
@@ -26,6 +26,10 @@
       font-size: 4.5vh;
     }
 
+    ::selection {
+      color: #000001;
+      background-color: #000000;
+    }
     main {
       display: flex;
       justify-content: center;
