--- a/hell.html
+++ b/hell.html
@@ -33,6 +33,12 @@
     #hell {
       position: relative;
     }
+
+    @media (min-aspect-ratio: 4/1) {
+      h1 {
+        font-size: 40vh;
+      }
+    }
   </style>
 </head>
 <body>
