--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!--
+Wasted Existence B___
+World Wide Web
+
+
+let's see, what is this project about? I guess it's a loose collection of web pages exploring the existential dread i feel from using the internet.
+
+
+ -->
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -61,9 +72,9 @@
   <h1>Welcome</h1>
   <main>
     <div>
-      <iframe src="./disclaimer.html"></iframe>
-      <caption>Disclaimer</caption>
-      <a target="_blank" href="./disclaimer.html">view ></a>
+      <iframe src="./time.html"></iframe>
+      <caption>Time</caption>
+      <a target="_blank" href="./time.html">view ></a>
     </div>
     <div>
       <iframe src="./death.html"></iframe>
@@ -76,9 +87,9 @@
       <a target="_blank" href="./fud.html">view ></a>
     </div>
     <div>
-      <iframe src="./fud2.html"></iframe>
-      <caption>F\U\D</caption>
-      <a target="_blank" href="./fud2.html">view ></a>
+      <iframe src="./stop.html"></iframe>
+      <caption>STOP</caption>
+      <a target="_blank" href="./stop.html">view ></a>
     </div>
     <div>
       <iframe src="./hell.html"></iframe>
@@ -91,19 +102,19 @@
       <a target="_blank" href="./missing.html">view ></a>
     </div>
     <div>
-      <iframe src="./stop.html"></iframe>
-      <caption>STOP</caption>
-      <a target="_blank" href="./stop.html">view ></a>
-    </div>
-    <div>
       <iframe src="./throwing.html"></iframe>
       <caption>Throwing Your Money Away</caption>
       <a target="_blank" href="./throwing.html">view ></a>
     </div>
     <div>
-      <iframe src="./time.html"></iframe>
-      <caption>Time</caption>
-      <a target="_blank" href="./time.html">view ></a>
+      <iframe src="./disclaimer.html"></iframe>
+      <caption>Disclaimer</caption>
+      <a target="_blank" href="./disclaimer.html">view ></a>
+    </div>
+    <div>
+      <iframe src="./fud2.html"></iframe>
+      <caption>F\U\D</caption>
+      <a target="_blank" href="./fud2.html">view ></a>
     </div>
   </main>
 
