--- a/missing.html
+++ b/missing.html
@@ -105,23 +105,23 @@
       0% {
         left: 0vh;
         top: 0vh;
-        color: hsla(59, 80%, 54%, 0);
-        text-shadow: 0 0 25px hsla(59, 80%, 54%, 0);;
+        color: hsla(52, 73%, 54%, 0);
+        text-shadow: 0 0 25px hsla(52, 73%, 54%, 0);;
 
       }
 
       10% {
         left: 1vh;
         top: -5vh;
-        color: hsla(59, 80%, 54%, 0.5);
-        text-shadow: 0 0 25px hsla(59, 80%, 54%, 1);;
+        color: hsla(52, 73%, 54%, 0.5);
+        text-shadow: 0 0 25px hsla(52, 73%, 54%, 1);;
       }
 
       100% {
         left: 10vh;
         top: -50vh;
-        color: hsla(59, 80%, 54%, 0);
-        text-shadow: 0 0 25px hsla(59, 80%, 54%, 0);;
+        color: hsla(52, 73%, 54%, 0);
+        text-shadow: 0 0 25px hsla(52, 73%, 54%, 0);;
       }
     }
 
@@ -146,6 +146,12 @@
         top: 50vh;
         color: hsla(201, 65%, 52%, 0);
         text-shadow: 0 0 25px hsla(201, 65%, 52%, 0);;
+      }
+    }
+
+    @media (min-aspect-ratio: 4/1) {
+      h1 {
+        font-size: 28vh;
       }
     }
   </style>
