--- a/fear.html
+++ b/fear.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Fear</title>
   <style type="text/css">
     * {
       margin: 0;
@@ -34,6 +34,8 @@
 
     .flash {
       animation: flash4 240ms linear infinite;
+      -webkit-text-stroke: 3px #ff0;
+      /*animation: flash4 240ms linear infinite;*/
     }
 
 
