--- a/god.html
+++ b/god.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Disclaimer</title>
+  <title>God</title>
 
   <style type="text/css">
     * {
@@ -10,18 +10,13 @@
       margin: 0;
     }
     h1 {
-
-      padding: 0.25em;
-      padding-bottom: 0;
       text-align: center;
       font-size: 11.6vh;
-
     }
 
     p {
-      padding: 0.25em;
+      padding-top: 0.25em;
       text-align: center;
-      /*max-width: 750px;*/
       margin: auto;
       font-size: 4.5vh;
     }
@@ -41,7 +36,7 @@
     section {
       display: inline-block;
       animation: borderBlinkVH 2s linear infinite;
-      padding: 1.5vh;
+      padding: 3.25vh;
       max-width: 97.4vh;
     }
 
@@ -57,7 +52,7 @@
 
       section {
         animation: borderBlinkVW 2s linear infinite;
-        padding: 1.5vw;
+        padding: 2.25vw;
       }
     }
 
@@ -66,7 +61,15 @@
         border: 0.65vh solid;
       }
 
+      25% {
+        border: 0.65vh dashed;
+      }
+
       50% {
+        border: 0.65vh none;
+      }
+
+      75% {
         border: 0.65vh dashed;
       }
 
@@ -80,7 +83,15 @@
         border: 0.65vw solid;
       }
 
+      25% {
+        border: 0.65vw dashed;
+      }
+
       50% {
+        border: 0.65vw none;
+      }
+
+      75% {
         border: 0.65vw dashed;
       }
 
