--- a/index.html
+++ b/index.html
@@ -2,8 +2,29 @@
 Wasted Existence B___
 World Wide Web
 
+Time Well Spent
+Screen Space
+Analysis paralysis
+Where Did The Time Go?
+Where Did It All Go?
+Is This All There Is?
+Was it Worth it?
+How Did I Get Here?
+Why Do I Do This To Myself?
+Screen Time
+Decisions Decisions
+Life Is For The Living
+
+Terminally Online
+
+Time To Live
+  Time to live is the expiration date attached to data in networking. When a caching (recurring) server queries the authoritative name server for any DNS records, the authoritative name server tells the caching server how long those records are good for—which is usually between a few minutes and one day.
+
+
 
 let's see, what is this project about? I guess it's a loose collection of web pages exploring the existential dread i feel from using the internet.
+
+what does it make me feel as i look at them? i guess a lot of them have the sense that time is moving forward as i spend my time staring at the screen. life is moving forward. things are advancing around me. i feel a slight shortness of breath and pressure in my chest. a mild nausia at the idea of wasint my life. wasting my precious hours on this earth. was it all for nothing?
 
 
  -->
@@ -13,7 +34,7 @@ let's see, what is this project about? I guess it's a loose collection of web pa
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>This Won't Last</title>
 
   <style type="text/css">
     * {
@@ -23,14 +44,15 @@ let's see, what is this project about? I guess it's a loose collection of web pa
 
     h1 {
       text-align: center;
-      margin: 1em 0;
+      margin: 0.75em 0;
     }
 
     main {
+      padding: 0 1vw;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
       column-gap: 1vw;
-      row-gap: 2vw;
+      row-gap: 1.5vw;
     }
 
     main div {
@@ -40,9 +62,25 @@ let's see, what is this project about? I guess it's a loose collection of web pa
       align-items: center;
     }
 
-    iframe {
-      width: 32vw;
-      height: 20vw;
+    a {
+      position: absolute;
+      margin-top: -20px;
+    }
+
+    iframe, a {
+      width: 23vw;
+      height: 24.5vh;
+    }
+
+    @media (max-width: 1400px) {
+      main {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+
+      iframe, a {
+        width: 31vw;
+        height: 20vw;
+      }
     }
 
     @media (max-width: 950px) {
@@ -50,8 +88,8 @@ let's see, what is this project about? I guess it's a loose collection of web pa
         grid-template-columns: 1fr 1fr;
       }
 
-      iframe {
-        width: 49vw;
+      iframe, a {
+        width: 48vw;
         height: 30vw;
       }
     }
@@ -61,60 +99,88 @@ let's see, what is this project about? I guess it's a loose collection of web pa
         grid-template-columns: 1fr;
       }
 
-      iframe {
-        width: 100vw;
+      iframe, a {
+        width: 97vw;
         height: 60vw;
       }
     }
   </style>
 </head>
 <body>
-  <h1>Welcome</h1>
+  <h1>This Won't Last</h1>
   <main>
     <div>
       <iframe src="./time.html"></iframe>
       <caption>Time</caption>
-      <a target="_blank" href="./time.html">view ></a>
+      <a target="_blank" href="./time.html"></a>
     </div>
+
+    <div>
+      <iframe src="./life.html"></iframe>
+      <caption>Life</caption>
+      <a target="_blank" href="./life.html"></a>
+    </div>
+
     <div>
       <iframe src="./death.html"></iframe>
       <caption>Death</caption>
-      <a target="_blank" href="./death.html">view ></a>
+      <a target="_blank" href="./death.html"></a>
     </div>
-    <div>
-      <iframe src="./fud.html"></iframe>
-      <caption>F/U/D</caption>
-      <a target="_blank" href="./fud.html">view ></a>
-    </div>
-    <div>
-      <iframe src="./stop.html"></iframe>
-      <caption>STOP</caption>
-      <a target="_blank" href="./stop.html">view ></a>
-    </div>
+
     <div>
       <iframe src="./hell.html"></iframe>
       <caption>Hell</caption>
-      <a target="_blank" href="./hell.html">view ></a>
+      <a target="_blank" href="./hell.html"></a>
     </div>
+
     <div>
-      <iframe src="./missing.html"></iframe>
-      <caption>Is Something Missing?</caption>
-      <a target="_blank" href="./missing.html">view ></a>
+      <iframe src="./money.html"></iframe>
+      <caption>Money</caption>
+      <a target="_blank" href="./money.html"></a>
     </div>
+
+
     <div>
-      <iframe src="./throwing.html"></iframe>
-      <caption>Throwing Your Money Away</caption>
-      <a target="_blank" href="./throwing.html">view ></a>
+      <iframe src="./fear.html"></iframe>
+      <caption>Fear</caption>
+      <a target="_blank" href="./fear.html"></a>
     </div>
+
     <div>
-      <iframe src="./disclaimer.html"></iframe>
-      <caption>Disclaimer</caption>
-      <a target="_blank" href="./disclaimer.html">view ></a>
+      <iframe src="./uncertainty.html"></iframe>
+      <caption>Uncertainty</caption>
+      <a target="_blank" href="./uncertainty.html"></a>
     </div>
+
     <div>
-      <iframe src="./fud2.html"></iframe>
-      <caption>F\U\D</caption>
-      <a target="_blank" href="./fud2.html">view ></a>
+      <iframe src="./doubt.html"></iframe>
+      <caption>Doubt</caption>
+      <a target="_blank" href="./doubt.html"></a>
+    </div>
+
+    <div>
+      <iframe src="./fomo.html"></iframe>
+      <caption>FOMO</caption>
+      <a target="_blank" href="./fomo.html"></a>
+    </div>
+
+    <div>
+      <iframe src="./stop.html"></iframe>
+      <caption>Stop</caption>
+      <a target="_blank" href="./stop.html"></a>
+    </div>
+
+    <div>
+      <iframe src="./god.html"></iframe>
+      <caption>God</caption>
+      <a target="_blank" href="./god.html"></a>
+    </div>
+
+
+    <div>
+      <iframe src="./yes.html"></iframe>
+      <caption>Yes</caption>
+      <a target="_blank" href="./yes.html"></a>
     </div>
   </main>
 
