--- a/time.html
+++ b/time.html
@@ -2,10 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>TIME IS RUNNING OUT</title>
+  <title>TIME</title>
   <style type="text/css">
     body {
-      /*background: #000;*/
       display: flex;
       align-items: center;
       justify-content: center;
@@ -64,7 +63,7 @@
     const with0 = x => x < 10 ? '0' + Math.floor(x) : Math.floor(x)
 
     const setTime = () => {
-      const diff = (expiration - new Date()) / 1000
+      const diff = Math.max(0, expiration - new Date()) / 1000
       const d = diff / 86400
       const h = (d - Math.floor(d)) * 24
       const m = (h - Math.floor(h)) * 60
