--- a/uncertainty.html
+++ b/uncertainty.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Uncertainty</title>
 
     <style>
       * {
@@ -63,7 +63,7 @@
 
       @keyframes MarqueeReverse {
         0% {
-          transform: transform: translate3d(0%, 0, 0);
+          transform: translate3d(0%, 0, 0);
         }
 
         100% {
