--- a/death.html
+++ b/death.html
@@ -10,6 +10,9 @@
       padding: 0;
       font-family: sans-serif;
     }
+    body {
+      background: #fff;
+    }
     .deathBox {
       background: #ddd;
       padding: 0.5vw;
