--- a/god.html
+++ b/god.html
@@ -9,6 +9,11 @@
       padding: 0;
       margin: 0;
     }
+
+    body {
+      background: #fff;
+    }
+
     h1 {
       text-align: center;
       font-size: 11.6vh;
