--- a/stop.html
+++ b/stop.html
@@ -9,6 +9,11 @@
       margin: 0;
       padding: 0;
     }
+
+    body {
+      background: #fff;
+    }
+
     h1 {
       font-size: 25vw;
       margin-bottom: 0.1em;
