--- a/time.html
+++ b/time.html
@@ -9,7 +9,7 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
-
+      background: #fff;
     }
     * {
       margin: 0;
