--- a/fear.html
+++ b/fear.html
@@ -9,6 +9,9 @@
       padding: 0;
       font-family: sans-serif;
     }
+    body {
+      background: #000;
+    }
     h1 {
       text-align: center;
       font-size: 13vw;
